--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "gcmodule"
+name = "jrsonnet-gcmodule"
 version = "0.3.3"
-authors = ["Jun Wu <quark@lihdd.net>"]
+authors = ["Jun Wu <quark@lihdd.net>", "Yaroslav Bolyukin <iam@lach.pw>"]
 edition = "2018"
 license = "MIT"
 description = "Cyclic garbage collection inspired by CPython's gc implementation."
 keywords = ["gc", "garbage", "cycle", "rc"]
-repository = "https://github.com/quark-zju/gcmodule"
+repository = "https://github.com/CertainLach/gcmodule"
 categories = ["memory-management"]
 readme = "README.md"
 
@@ -14,7 +14,7 @@ readme = "README.md"
 quickcheck = { version = "0.9", default-features = false }
 
 [dependencies]
-gcmodule_derive = { version = "=0.3.3", optional = true, path = "gcmodule_derive" }
+gcmodule_derive = { package = "jrsonnet-gcmodule-derive", version = "=0.3.3", optional = true, path = "gcmodule_derive" }
 parking_lot = { version = "0.10", optional = true }
 
 [features]
@@ -26,6 +26,4 @@ sync = ["parking_lot"]
 testutil = []
 
 [workspace]
-members = [
-  "gcmodule_derive",
-]
+members = ["gcmodule_derive"]
