--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 quickcheck = { version = "0.9", default-features = false }
 
 [dependencies]
-jrsonnet-gcmodule-derive = { version = "0.3.3", optional = true, path = "gcmodule_derive" }
+jrsonnet-gcmodule-derive = { version = "0.3.5-alpha.0", optional = true, path = "gcmodule_derive" }
 parking_lot = { version = "0.10", optional = true }
 
 [features]
