build: rename package for tests
Signed-off-by: Yaroslav Bolyukin <iam@lach.pw>

--- a/gcmodule_derive/Cargo.toml
+++ b/gcmodule_derive/Cargo.toml
@@ -16,4 +16,4 @@ syn = { version = "1", features = ["derive"] }
 proc-macro2 = "1.0.32"
 
 [dev-dependencies]
-gcmodule = { package = "jrsonnet-gcmodule", path = ".." }
+jrsonnet-gcmodule = { path = ".." }
