--- a/gcmodule_derive/Cargo.toml
+++ b/gcmodule_derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jrsonnet-gcmodule-derive"
-version = "0.3.5-alpha.0"
+version = "0.3.5"
 authors = ["Jun Wu <quark@lihdd.net>", "Yaroslav Bolyukin <iam@lach.pw>"]
 edition = "2018"
 license = "MIT"
