--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ readme = "README.md"
 quickcheck = { version = "1.0", default-features = false }
 
 [dependencies]
-jrsonnet-gcmodule-derive = { optional = true, path = "gcmodule_derive" }
+jrsonnet-gcmodule-derive = { version = "0.3.9", optional = true, path = "gcmodule_derive" }
 parking_lot = { version = "0.12.3", optional = true }
 
 [features]
