--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -4,20 +4,18 @@ name = "gcmodule-fuzz"
 version = "0.0.0"
 authors = ["Jun Wu <quark@lihdd.net>"]
 publish = false
-edition = "2018"
+edition.workspace = true
 
 [package.metadata]
 cargo-fuzz = true
 
 [dependencies]
-libfuzzer-sys = "0.3"
+libfuzzer-sys = "0.4.9"
 
-[dependencies.gcmodule]
+[dependencies.jrsonnet-gcmodule]
 path = ".."
 features = ["testutil"]
 
 [[bin]]
 name = "graph16"
 path = "fuzz_targets/graph16.rs"
-
-[workspace]
