--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
-channel = "nightly-2024-11-20"
-components = ["rustfmt", "clippy", "rust-analyzer", "rust-src", "miri"]
+channel = "nightly-2025-04-20"
+components = ["rustfmt", "clippy", "rust-analyzer", "rust-src"]
