--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.package]
-version = "0.3.9"
+version = "0.3.10"
 authors = ["Jun Wu <quark@lihdd.net>", "Yaroslav Bolyukin <iam@lach.pw>"]
 edition = "2024"
 license = "MIT"
@@ -8,7 +8,7 @@ repository = "https://github.com/CertainLach/gcmodule"
 [package]
 name = "jrsonnet-gcmodule"
 version.workspace = true
-authors.workspace  = true
+authors.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -21,11 +21,11 @@ readme = "README.md"
 quickcheck = { version = "1.0", default-features = false }
 
 [dependencies]
-jrsonnet-gcmodule-derive = { version = "0.3.9", optional = true, path = "gcmodule_derive" }
+jrsonnet-gcmodule-derive = { version = "0.3.10", optional = true, path = "gcmodule_derive" }
 parking_lot = { version = "0.12.3", optional = true }
 
 [features]
-default = ["derive", "sync"]
+default = ["derive"]
 debug = []
 derive = ["jrsonnet-gcmodule-derive"]
 nightly = []
@@ -34,4 +34,3 @@ testutil = []
 
 [workspace]
 members = ["gcmodule_derive", "fuzz"]
-
